# securecodops-env

./: .gitignore  Dockerfile  README.md  _git_log.txt  app.py  inference.py  openenv.yaml  pyproject.toml  requirements.txt  run_inference.py
baseline/: run_baseline.py
env/: environment.py  models.py  reward.py  state.py
server/: app.py
tasks/: graders.py  task_easy.py  task_hard.py  task_medium.py
tasks/dataset/: easy_samples.json  hard_samples.json  medium_samples.json
tests/: test_env.py
