[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "securecodops-env"
version = "0.1.0"
description = "Secure Code Ops OpenEnv Hackathon Submission"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "pydantic>=2.7.0",
    "requests>=2.31.0",
    "pyyaml>=6.0.1",
    "pytest>=7.4.0",
    "python-multipart>=0.0.9",
    "openai>=1.12.0",
    "openenv-core>=0.2.0"
]

[project.scripts]
server = "server.app:start"
